# osu.rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: api.rs  builder.rs  error.rs  lib.rs  model.rs  utils.rs
src/bridge/: hyper.rs  mod.rs  reqwest.rs
tests/: test_api.rs  test_deser.rs  test_hyper.rs
tests/resources/: beatmaps_01.json  performances_01.json  user_01.json  user_best_01.json  user_recent_01.json
