[package]
authors = ["Zeyla Hellyer <zey@zey.moe>"]
description = "Unofficial Rust wrapper for the osu! API."
documentation = "https://docs.rs/osu"
homepage = "https://github.com/zeyla/osu.rs"
license = "ISC"
keywords = ["osu", "api"]
name = "osu"
readme = "README.md"
repository = "https://github.com/zeyla/osu.rs.git"
version = "0.1.1"

[dependencies]
bitflags = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
hyper = "0.10"
hyper-native-tls = "0.2"

[dependencies.hyper]
optional = true
version = "0.10"

[features]
default = ["hyper"]
