[package]
authors = ["Zeyla Hellyer <zey@zey.moe>"]
description = "Unofficial Rust wrapper for the osu! API."
documentation = "https://docs.rs/osu"
homepage = "https://github.com/zeyla/osu.rs"
license = "ISC"
keywords = ["osu", "api"]
name = "osu"
readme = "README.md"
repository = "https://github.com/zeyla/osu.rs.git"
version = "0.2.0"

[dependencies]
bitflags = "^1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.futures]
optional = true
version = "~0.1"

[dependencies.hyper]
optional = true
version = "0.11"

[dependencies.reqwest]
optional = true
version = "~0.8"

[dev-dependencies]
hyper-tls = "0.1"
tokio-core = "~0.1"

[features]
default = ["hyper-support"]
hyper-support = ["futures", "hyper"]
reqwest-support = ["reqwest"]
